5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1800_2563.log
== SUBMITION (2019-06-11 11:04:46) 
-- CODE:
from numpy import*
x = array (eval(input("x:")))

while(size x>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
0.94435
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 4
    while(size x>1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:05:12) 
-- CODE:
from numpy import*
x = array (eval(input("x:")))

while(size (v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
1.09828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size (v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:05:18) 
-- CODE:
from numpy import*
x = array (eval(input("x:")))

while(size (v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
0.915696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size (v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:05:31) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size (v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
1.12278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size (v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:05:38) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
1.00869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:07) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:08) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
0.958734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:16) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
3.28956
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:17) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
4.17308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:17) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
6.00451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:19) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
8.48198
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:31) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v=array(eval(input("x:")))
	
-- EXECUTION TIME:
4.13953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:41) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
4.83314
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:42) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
7.45983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:43) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
10.8598
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:43) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
10.0606
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:44) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
10.477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:44) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
10.7924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:44) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
12.1723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:44) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
12.4966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:57) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
7.34235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:06:59) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
3.91468
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:02) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
7.05972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:02) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	
	
-- EXECUTION TIME:
7.97758
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:04) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
8.9067
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:05) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
10.344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:06) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
8.22186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 4, in <module>
    while(size(v)>1):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:11) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(x)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
4.08396
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:12) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
4.22747
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
x:11
x:4
x:1
x:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
x:5
x:3
x:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:12) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(x)>1):
	aprov=0
	for e in x:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
2.54199
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:12) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
4.23415
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:07:18) 
-- CODE:
from numpy import*
x = array(eval(input("x:")))

while(size(x)>1):
	aprov=0
	for e in x:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x:")))
	
-- EXECUTION TIME:
1.01923
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
